K8S Spring vs Vert.X separation